k8s/analytics-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: analytics-server
  name: analytics-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-server
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        app: analytics-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: analytics-server:latest
          imagePullPolicy: IfNotPresent
          name: analytics-server
          ports:
            - containerPort: 8007
              protocol: TCP
      hostname: analytics-server
      restartPolicy: Always
