k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        app: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_BASICAUTH_PASSWORD
              value: admin
            - name: ME_CONFIG_BASICAUTH_USERNAME
              value: admin
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: pass
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: root
            - name: ME_CONFIG_MONGODB_SERVER
              value: mongo
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-express-data
      restartPolicy: Always
      volumes:
        - name: mongo-express-data
          persistentVolumeClaim:
            claimName: mongo-express-data
