k8s/notifications-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: notifications-server
  name: notifications-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-server
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        app: notifications-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: mtucakov/notifications-server:latest
          imagePullPolicy: Always
          name: notifications-server
          ports:
            - containerPort: 8004
              protocol: TCP
      hostname: notifications-server
      restartPolicy: Always
