k8s/workflow-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: workflow-server
  name: workflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow-server
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        app: workflow-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: workflow-server:latest
          imagePullPolicy: IfNotPresent
          name: workflow-server
          ports:
            - containerPort: 8005
              protocol: TCP
      hostname: workflow-server
      restartPolicy: Always
