k8s/analytics-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: analytics-server
  name: analytics-server
spec:
  ports:
    - name: "8007"
      port: 8007
      targetPort: 8007
  selector:
    app: analytics-server
