k8s/namenode-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: namenode
  name: namenode
spec:
  ports:
    - name: "9870"
      port: 9870
      targetPort: 9870
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "8200"
      port: 8200
      targetPort: 8200
    - name: "8020"
      port: 8020
      targetPort: 8020
  selector:
    app: namenode
