k8s/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: neo4j
  name: neo4j
spec:
  ports:
    - name: "7687"
      port: 7687
      targetPort: 7687
    - name: "7474"
      port: 7474
      targetPort: 7474
  selector:
    app: neo4j
