k8s/projects-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: projects-server
  name: projects-server
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    app: projects-server
