k8s/tracing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracing
  labels:
    app: tracing
spec:
  type: NodePort
  selector:
    app: tracing
  ports:
    - name: jaeger-udp-6831
      port: 6831
      targetPort: 6831
      protocol: UDP
    - name: jaeger-udp-6832
      port: 6832
      targetPort: 6832
      protocol: UDP
    - name: jaeger-ui
      port: 16686
      targetPort: 16686
      protocol: TCP
      nodePort: 31686  # lokalni port na hostu, slobodno promeni po želji
    - name: jaeger-collector-http
      port: 14268
      targetPort: 14268
      protocol: TCP
    - name: jaeger-collector-grpc
      port: 14250
      targetPort: 14250
      protocol: TCP
