k8s/angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - trelloboard.local
      secretName: tls-secret
  rules:
    - host: trelloboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular
                port:
                  number: 4200
